# miniprojekti

./: .coveragerc  .env  .gitignore  .pylintrc  LICENSE.md  README.md  codecov.yml  dummy.py  file.bib  pyproject.toml  referencedb.db  retro.md  testi.txt
.github/workflows/: pipeline.yml
data/: arefdatabase.sqlite  bookrefdatabase.sqlite  irefdatabase.sqlite
src/: BibLibrary.py  DummyLibrary.py  ReferencesLibrary.py  app.py  book.py  build.py  config.py  console_io.py  customer_viewing.py  database.py  database_connection.py  database_initialization.py  db_build.py  dummy_library.py  log.html  main.py  output.xml  references.db  references.py  references_library.py  report.html  schema.sql  storage_interface.py  stub_io.py
src/data/: arefdatabase.sqlite  bookrefdatabase.sqlite  irefdatabase.sqlite
src/db_config/: config.py  database_connection.py  database_initialization.py
src/repositories/: book.py  references_repository.py  referencesrepository.py
src/services/: reference_serivices.py  reference_service.py  references_service.py
src/tests/: .dummy.robot.swp  bibtex_export.robot  book_service_test.py  delete_all.robot  delete_single.robot  dummy.robot  listing.robot  log.html  output.xml  reference_service_test.py  references.robot  references_test.py  report.html  resource.robot  search.robot  sorting.robot  storage_interface_test.py  test_dummy.py
