[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["Ville Salmela <villesalmela@users.noreply.github.com>", "Antti Hyytiäinen <hyytant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^6.1.1"
robotframework-tidy = "^4.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
pylint = "^3.0.2"
robotframework = "^6.1.1"
pytest-cov = "^4.1.0"
pybtex = "^0.24.0"
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
